--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
+    - run: chmod -R 777 storage bootstrap/cache
     - name: Build React assets
     - name: Setup Node
       uses: actions/setup-node@v1
