--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -27,13 +27,15 @@ jobs:
       run: php artisan key:generate
     - name: Directory Permissions
     - run: chmod -R 777 storage bootstrap/cache
-    - name: Build React assets
-    - name: Setup Node
+
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build
+    - name: Setup Node
+      run: npm ci
+    - name: Install react
+    - name: Build React assets
+      run: npm run build
     - name: Create Database
       run: |
         mkdir -p database
