--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,20 +26,17 @@ jobs:
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
-    - run: chmod -R 777 storage bootstrap/cache
-
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Setup Node
-      run: npm ci
-    - name: Install react
-    - name: Build React assets
-      run: npm run build
+      run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Cmpile Node
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+    - run: npm run build
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
