--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -31,11 +31,11 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
-    - name: Cmpile Node
+    - name: Compile Node
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
+    - run: npm install
     - run: npm run build
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
