--- a/.env.testing
+++ b/.env.testing
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=:memory:
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=db-mysql-sgp1-90992-do-user-14606689-0.c.db.ondigitalocean.com
+DB_PORT=25060
+DB_DATABASE=idyllic-db-test
+DB_USERNAME=doadmin
+DB_PASSWORD=AVNS_OaryjuMTPupy_4kd_Ic
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
