[Added] Policies, Admin power

--- a/.env
+++ b/.env
@@ -9,12 +9,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db-mysql-sgp1-90992-do-user-14606689-0.c.db.ondigitalocean.com
-DB_PORT=25060
-DB_DATABASE=idyllic-db
-DB_USERNAME=doadmin
-DB_PASSWORD=AVNS_OaryjuMTPupy_4kd_Ic
-DB_SSLMODE=REQUIRED
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=idyllic-wedding
+DB_USERNAME=root
+DB_PASSWORD=
+DB_SSLMODE=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
