--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "allowJs": true,
         "module": "ESNext",
         "moduleResolution": "bundler",
+        "allowSyntheticDefaultImports": true,
         "jsx": "react-jsx",
         "strict": true,
         "isolatedModules": true,
