--- a/.env
+++ b/.env
@@ -55,7 +55,7 @@ PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
 VITE_APP_NAME="${APP_NAME}"
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_HOST="${APP_URL}: ${APP}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
