--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "react-icons": "^4.11.0",
         "react-router-dom": "^6.17.0"
     }
 }
