--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^18.13.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
+        "@types/react-icons": "^3.0.0",
         "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-react": "^4.0.3",
         "autoprefixer": "^10.4.12",
