--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "noEmit": true,
+        "noImplicitAny": false,
         "paths": {
             "@/*": ["./resources/js/*"]
         }
