--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.12",
         "@tailwindcss/forms": "^0.5.3",
-        "@types/node": "^18.13.0",
+        "@types/node": "^18.18.8",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
         "@types/react-icons": "^3.0.0",
@@ -26,6 +26,13 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@chakra-ui/react": "^2.8.1",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@tanstack/react-table": "^8.10.7",
+        "@types/date-fns": "^2.6.0",
+        "date-fns": "^2.30.0",
+        "framer-motion": "^10.16.4",
         "react-icons": "^4.11.0",
         "react-router-dom": "^6.17.0"
     }
