[Added] Booking step

--- a/.env.testing
+++ b/.env.testing
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db-mysql-sgp1-90992-do-user-14606689-0.c.db.ondigitalocean.com
+DB_HOST=db-mysql-nyc3-40245-do-user-14606689-0.c.db.ondigitalocean.com
 DB_PORT=25060
-DB_DATABASE=idyllic-db-test
+DB_DATABASE=defaultdb
 DB_USERNAME=doadmin
-DB_PASSWORD=AVNS_OaryjuMTPupy_4kd_Ic
+DB_PASSWORD=AVNS_Wi_f09u4RFiFrrSuNQ3
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
