--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@tailwindcss/forms": "^0.5.3",
         "@types/node": "^18.18.8",
         "@types/react": "^18.0.28",
+        "@types/react-datepicker": "^4.19.1",
         "@types/react-dom": "^18.0.10",
         "@types/react-icons": "^3.0.0",
         "@types/ziggy-js": "^1.3.2",
@@ -33,6 +34,7 @@
         "@types/date-fns": "^2.6.0",
         "date-fns": "^2.30.0",
         "framer-motion": "^10.16.4",
+        "react-datepicker": "^4.21.0",
         "react-icons": "^4.11.0",
         "react-router-dom": "^6.17.0"
     }
