[Added] Paymongo paywall

--- a/.env
+++ b/.env
@@ -16,6 +16,9 @@ DB_USERNAME=root
 DB_PASSWORD=
 DB_SSLMODE=
 
+PAYMONGO_SECRET_KEY=sk_test_bjYCdCmYSqykRUbpiWThJgDv
+PAYMONGO_PUBLIC_KEY=pk_test_TX6e8JDedNKcRVgqgGtD7dfp
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
