--- a/.env
+++ b/.env
@@ -60,6 +60,7 @@ PUSHER_APP_CLUSTER=mt1
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_HOST="${APP_URL}: ${APP}"
+VITE_BACKEND_URL="${APP_URL}:8000"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
