--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "framer-motion": "^10.16.4",
         "react-datepicker": "^4.21.0",
         "react-icons": "^4.11.0",
+        "react-multi-carousel": "^2.8.4",
         "react-router-dom": "^6.17.0"
     }
 }
