--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@emotion/styled": "^11.11.0",
         "@tanstack/react-table": "^8.10.7",
         "@types/date-fns": "^2.6.0",
+        "boxicons": "^2.1.4",
         "date-fns": "^2.30.0",
         "framer-motion": "^10.16.4",
         "react-datepicker": "^4.23.0",
