--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
         "@types/react-icons": "^3.0.0",
+        "@types/react-slick": "^0.23.12",
         "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-react": "^4.0.3",
         "autoprefixer": "^10.4.12",
@@ -37,6 +38,8 @@
         "react-dropzone": "^14.2.3",
         "react-icons": "^4.11.0",
         "react-multi-carousel": "^2.8.4",
-        "react-router-dom": "^6.17.0"
+        "react-router-dom": "^6.17.0",
+        "react-slick": "^0.29.0",
+        "slick-carousel": "^1.8.1"
     }
 }
