--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@ DB_USERNAME=root
 DB_PASSWORD=
 DB_SSLMODE=
 
-PAYMONGO_SECRET_KEY=sk_test_qM8dLkbH29Nhm56JcXoMAxwZ
-PAYMONGO_PUBLIC_KEY=pk_test_KXcYyZjEyjfeKENPMuJUn8yn
+PAYMONGO_SECRET_KEY=
+PAYMONGO_PUBLIC_KEY=
 
 
 BROADCAST_DRIVER=log
@@ -33,15 +33,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=mailgun
-MAIL_HOST=mailpit
-MAIL_PORT=587
-MAIL_USERNAME=postmaster@ph.redemption-dev.online
-MAIL_PASSWORD=3a2f5e9a77b8b97508f7dcb8f3c4fd40-3750a53b-8510d6fd
+MAIL_MAILER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=SSL
-MAILGUN_DOMAIN=ph.redemption-dev.online
-MAILGUN_SECRET=fb580727c384ef2c17dbe7b905c282bb-3750a53b-e5fad418
-MAIL_FROM_ADDRESS="plant-ecommerce@no-reply.com"
+MAILGUN_DOMAIN=
+MAILGUN_SECRET=
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
