[Added] Production branch

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME="Idyllic-Wedding"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:DqmnMUpGjQOvF9BjlXI67JvMBcfiaSHVxkC0OaGg0Ts=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://164.90.146.161
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -27,9 +27,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=164.90.146.161
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=164.90.146.161
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -60,7 +60,7 @@ PUSHER_APP_CLUSTER=mt1
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_HOST="${APP_URL}: ${APP}"
-VITE_BACKEND_URL="${APP_URL}:8000"
+VITE_BACKEND_URL="${APP_URL}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
