--- a/.env
+++ b/.env
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=viaduct.proxy.rlwy.net
-DB_PORT=40050
-DB_DATABASE=railway
-DB_USERNAME=postgres
-DB_PASSWORD=Eg4E-cEEd3-fGdcBB3BaaE5C2dfdc5Be
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=idyllic-wedding
+DB_USERNAME=root
+DB_PASSWORD=
 DB_SSLMODE=
 
 PAYMONGO_SECRET_KEY=
