--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=idyllic-wedding
+DB_HOST=roundhouse.proxy.rlwy.net
+DB_PORT=54314
+DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=2-Db16AG1Hhbc-Ah32a1FEa1b1hfeA2H
 DB_SSLMODE=
 
 PAYMONGO_SECRET_KEY=
